    distribution distribution

  * New function funnel.netmeta() for 'comparison-adjusted' funnel
    plots

  * New function forest.netcomb() for forest plots of component
    network meta-analysis

  * New functions netbind() and forest.netbind() to combine network
    meta-analysis objects and to generate a forest plot with results
    of several network meta-analyses

  * Circular network graphs with minimal number of crossings

  * Default setting for levels of confidence intervals can be
    specified using R function settings.meta(); the default is still
    0.95, i.e., 95% confidence intervals are computed

 ** User-visible changes **

  * netmeta():
    - new list elements:
      - 'k.trts' with number of studies evaluating a treatment
      - 'n.trts' with number of observations receiving a treatment
      - 'events.trts' with number of events observed for a treatment
      - 'n.matrix' with number of observations in direct comparisons
      - 'events.matrix' with number of events in direct comparisons
      - 'designs' with treatment designs

  * pairwise():
    - keep original order of studies
    - arguments 'event' and 'n' can be used for generic meta-analysis
      method based on arguments 'TE' and 'seTE'
    - argument 'n' can be used for meta-analysis with count outcomes
      (based on arguments 'event' and 'time')

  * forest.netsplit() and print.netsplit():
    - argument 'showall' replaced with 'show' (see help pages)

  * forest.netsplit():
    - show prediction intervals as colored bars
    - forest plot with layout 'subgroups by comparisons':
      omit treatment estimates in rows with prediction intervals if
      network estimates are also shown

  * netcomb() and discomb():
    - argument 'seq.components' replaced with 'seq.comps'

  * discomb():
    - arguments 'reference.group' and 'baseline.reference'
    
 ** Bug fixes **

  * netsplit():
    - do not reorder a treatment comparison if reference treatment